--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container-fluid px-0">
-        <h1 style="font-size:2vw;">l e t s &ensp; c o n n e c t</h1>
+        <h1 style="font-size:1rem;">l e t s &ensp; c o n n e c t</h1>
         <div class="row justify-content-center">
 
             <div class="col-auto">
