--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="row justify-content-center">
 
             <div class="col-auto">
-                <a href="https://www.instagram.com/_thaslim.k/" target="_blank" class="icon"><i
+                <a href="https://www.instagram.com/techie.bud/" target="_blank" class="icon"><i
                         class="fab fa-instagram"></i></a>
             </div>
 
